<resources>
  <string name="app_name">Fridger</string>
  <string name="download_queue_provider_authority">com.amazonaws.mobile.downloader-com.amazon.mysampleapp</string>
  <string name="content_file_provider_authority">com.mysampleapp.fileprovider</string>
  <string name="google_cloud_messaging_package">com.mysampleapp</string>
  <string name="main_nav_menu_item_home">Home</string>
  <string name="home_intro">An intelligent manager\nof your fridge.</string>
  <string name="title_activity_item_detail">Item Detail</string>
  <string name="title_activity_item_list">Item List</string>
  <string name="title_activity_main">@string/app_name</string>
  <string name="button_text_sign_in">SIGN IN</string>
  <string name="button_text_sign_out">SIGN OUT</string>
  <string name="blank"></string>
  <string name="exp_date">Expiration Date:</string>
  <string name="ok">Update</string>
  <string name="cancel">Cancel</string>
  <string name="alarm">Set Expiration Alarm</string>
    <string name="recommend">Recommend Me</string>
    <string name="ingredient">Ingredients</string>
  <string name="on">on</string>
  <string name="off">off</string>
  <string name="alarmMode">Notification</string>
  <string name="vibration">Vibration</string>
  <string name="main_nav_menu_default_user_text">\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020</string>
  <string name="content_helper_error_title">No Content Viewer</string>
  <string name="content_helper_error_no_app">No Viewing App exists for content type \'%s\'.</string>
  <string name="feature_space_title">Space</string>
  <string name="feature_recipe_title">Recipe</string>
  <string name="fragment_demo_instruction_overview_header">Overview</string>
  <string name="fragment_demo_instruction_description_header">Sample App Features</string>
  <string name="feature_sign_in_title">User Sign-in</string>
  <string name="feature_sign_in_subtitle">Let your users sign in with public identity providers or your own identity system.</string>
  <string name="feature_sign_in_overview">Whether your users sign in or not, the User sign-in feature configures Amazon Cognito to uniquely identify the user and provide your app the appropriate credentials to access your AWS resources.</string>
  <string name="feature_sign_in_description">The Sample App demonstrates assignment of a unique identifier for the user, the Amazon Cognito User ID. If optional or mandatory User Sign-in has been enabled in your project, then the Sample App also includes a sign-in screen, with a button for each configured sign-in provider.</string>
  <string name="feature_sign_in_powered_by">Powered by Amazon Cognito</string>
  <string name="feature_sign_in_demo_button">Demo User Identity</string>
  <string name="feature_user_data_storage_title">User Data Storage</string>
  <string name="feature_user_data_storage_subtitle">Store files for your users in the cloud.\nStore and sync user data in key/value pairs.</string>
  <string name="feature_user_data_storage_overview">Store user files such as photos in the cloud. Save user data in key/value pairs and sync across devices that are signed-in with the same user.</string>
  <string name="feature_user_data_storage_description">The Sample App demonstrates User File Storage and User Profile Data. The User File Storage demonstration includes a remote file explorer, which allows you to upload and download files from your Amazon S3 bucket. You will have access to four folders, a public folder where files are accessible to all users, a private folder where files are only accessible by the current app user, a protected folder where files are read-only to all users but only the owner of the folder can add or delete files, and the uploads folder which is write-only for all users.\n\nThe User Profile Data demonstration stores an app color theme using Amazon Cognito Sync and synchronizes that data across all of the user\'s devices as key/value pairs.</string>
  <string name="feature_user_data_storage_powered_by">Powered by Amazon Cognito and Amazon S3</string>
  <string name="feature_user_data_storage_demo_button_user_file_storage">Demo User File Storage</string>
  <string name="feature_user_data_storage_demo_button_user_settings">Demo User Profile Data</string>
  <string name="feature_push_notifications_title">Push Notifications</string>
  <string name="feature_push_notifications_subtitle">Send push notifications to individuals or groups of users.</string>
  <string name="feature_push_notifications_overview">Receive push notifications on your device and subscribe to topics you have created.</string>
  <string name="feature_push_notifications_description">The Sample App allows you to register to receive push notifications, and it provides checkboxes to demonstrate subscribing to receive messages from your configured Amazon SNS topics.</string>
  <string name="feature_push_notifications_powered_by">Powered by Amazon SNS</string>
  <string name="feature_push_notifications_demo_button">Demo Push Notifications</string>
  <string name="main_fragment_title_user_identity">User Identity</string>
  <string name="main_fragment_subtitle_user_identity">Keep track of users</string>
  <string name="identity_demo_text_view_description">Displays the user identity.</string>
  <string name="unknown_user">Guest User</string>
  <string name="user_id">USER IDENTIFIER</string>
  <string name="home_demo_textview_intro_description">introduction</string>
  <string name="identity_demo_textview_username_description">User\'s name</string>
  <string name="identity_demo_textview_userid_description">User\'s unique identifier</string>
  <string name="identity_demo_unknown_identity_text">&lt;UNKNOWN IDENTITY&gt;</string>
  <string name="identity_demo_dialog_dismiss_text">DISMISS</string>
  <string name="identity_demo_error_dialog_title">Failed Identity Retrieval</string>
  <string name="identity_demo_error_message_failed_get_identity">Could not retrieve the user identity:\u0020</string>
  <string name="main_fragment_title_push_notification">Push Notifications</string>
  <string name="main_fragment_subtitle_push_notification">Engage users with push notifications</string>
  <string name="push_enable_choice_text">Receive Push Notifications</string>
  <string name="push_demo_title">Fridger</string>
  <string name="push_demo_progress_dialog_title">Please wait &#8230;</string>
  <string name="push_demo_wait_message_register">Registering device for push notification.</string>
  <string name="push_demo_wait_message_update_notification">Updating push notification status.</string>
  <string name="push_demo_wait_message_update_subscription">Updating subscription status.</string>
  <string name="push_demo_error_message_register">Failed to register device due to \'%s\'.</string>
  <string name="push_demo_error_message_update_notification">Failed to update notification status due to \'%s\'.</string>
  <string name="push_demo_error_message_update_subscription">Failed to update subscription due to \'%s\'.</string>
  <string name="push_demo_error_message_google_play_services_unavailable">Push Notifications are disabled because Google Play Services are unavailable on the device.</string>
  <string name="push_demo_confirm_message_unsubscribe">Do you want to unsubscribe from \'%s\'.</string>
  <string name="content_dialog_ok">OK</string>
  <string name="content_cache_summary_text">Cache Summary</string>
  <string name="content_cache_limit_text">Limit</string>
  <string name="content_cache_use_text">In Use</string>
  <string name="content_cache_available_text">Available</string>
  <string name="content_cache_pinned_text">Pinned</string>
  <string name="content_refresh_text">Refresh</string>
  <string name="content_download_recent_text">Download Recent</string>
  <string name="content_set_cache_size_text">Set Cache Size</string>
  <string name="content_clear_cache_text">Clear Cache</string>
  <string name="content_path_prefix_text">Path:\u0020</string>
  <string name="content_folder_text">This is a folder.</string>
  <string name="content_context_menu_open">Open</string>
  <string name="content_context_menu_open_remote">Open Remote URL</string>
  <string name="content_context_menu_download">Download</string>
  <string name="content_context_menu_download_latest">Download Latest Version</string>
  <string name="content_context_menu_pin">Pin</string>
  <string name="content_context_menu_download_pin">Download &amp; Pin</string>
  <string name="content_context_menu_unpin">Unpin</string>
  <string name="content_context_menu_delete_local">Delete Local Copy</string>
  <string name="content_progress_dialog_title_wait">Please wait &#8230;</string>
  <string name="content_progress_dialog_message_load_local_content">Loading local content</string>
  <string name="content_progress_dialog_message_load_content">Loading S3 objects list</string>
  <string name="content_list_failure_text">Failure Listing Content</string>
  <string name="content_transfer_failure_text">Transfer Failure</string>
  <string name="content_removal_error_text">Content Removal Error</string>
  <string name="content_permission_failure_title_text">Permission Failure</string>
  <string name="content_permission_failure_text">Denial of Read External Storage Permission has disabled the ability to upload user files.</string>
  <string name="main_fragment_title_user_files">User Files</string>
  <string name="main_fragment_subtitle_user_files">Store and access files for your users.</string>
  <string name="user_files_demo_button_public">PUBLIC</string>
  <string name="user_files_demo_button_private">PRIVATE</string>
  <string name="user_files_demo_button_protected">PROTECTED</string>
  <string name="user_files_demo_button_uploads">UPLOADS</string>
  <string name="user_files_demo_dialog_signin_message">Private user file storage is only available to users who are signed-in.\n\nWould you like to sign in?</string>
  <string name="user_files_browser_upload_text">Upload</string>
  <string name="user_files_browser_new_folder_text">New Folder</string>
  <string name="user_files_browser_context_menu_delete">Delete Remote File</string>
  <string name="user_files_browser_dialog_create_folder_title">New folder</string>
  <string name="user_files_browser_progress_dialog_message_create_folder">Creating folder \'%s\'</string>
  <string name="user_files_browser_progress_dialog_message_delete_item">Deleting \'%s\'</string>
  <string name="user_files_browser_progress_dialog_message_upload_file">Uploading file \'%s\'</string>
  <string name="user_files_browser_progress_dialog_message_download_item">Downloading item \'%s\'</string>
  <string name="user_files_browser_error_message_create_folder">Failed to create folder due to \'%s\'.</string>
  <string name="user_files_browser_error_message_delete_item">Failed to delete item due to \'%s\'.</string>
  <string name="user_files_browser_error_message_download_item">Failed to download item due to \'%s\'.</string>
  <string name="user_files_browser_error_message_upload_file">Failed to upload file due to \'%s\'.</string>
  <string name="user_files_demo_ok_message_upload_file">File upload completed successfully for \'%s\'.</string>
  <string name="main_fragment_title_user_settings">User Profile Data</string>
  <string name="settings_fragment_dialog_title">Please wait &#8230;</string>
  <string name="settings_fragment_dialog_message">Loading&#8230;</string>
  <string name="settings_fragment_prompt">Please choose a theme:</string>
</resources>