<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:weightSum="1">

    <ImageView
        android:src="@mipmap/setalarm"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="#483D8B"
        android:contentDescription="@string/app_name"
        android:padding="10dp"
        android:layout_weight="0.31" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_weight="0.1"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_gravity="center_vertical"
            android:textSize="18sp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/alarmMode" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:gravity="left"
            android:layout_weight="0.3"
            android:id="@+id/alarmOn"
            android:textOn="@string/on"
            android:switchMinWidth="80dp"
            android:textOff="@string/off" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_weight="0.1"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_gravity="center_vertical"
            android:textSize="18sp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/vibration" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:gravity="left"
            android:layout_weight="0.3"
            android:id="@+id/alarmVibrate"
            android:textOff="@string/off"
            android:textOn="@string/on"
            android:switchMinWidth="80dp" />
    </LinearLayout>


</LinearLayout>