<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.Android.com/apk/res-auto"
    xmlns:app2="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mysampleapp.MainActivity">

    <LinearLayout
        android:id="@+id/main_content_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_background">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:background="@color/top_bar_background"
            android:text="@string/blank" />

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/top_bar_background"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:fontFamily="sans-serif-light"
            android:layout_gravity="center"
            app2:titleTextAppearance="@style/DancingWhite"
            app2:navigationIcon="@mipmap/navico"
            app2:contentInsetStartWithNavigation="40dp"
            app2:contentInsetEnd="40dp"
            app2:contentInsetLeft="40dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:background="@color/top_bar_background"
            android:text="@string/blank" />

        <FrameLayout
            android:id="@+id/main_fragment_container"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <!-- navigation drawer -->
    <LinearLayout
        android:id="@+id/nav_drawer"
        android:orientation="vertical"
        android:layout_gravity="start"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/nav_drawer_background"
        android:weightSum="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="230dp"
            android:background="@mipmap/ice"
            android:layout_gravity="bottom">
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/main_nav_menu_default_user_text"
                android:id="@+id/userName" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_text_sign_out"
                android:id="@+id/button_signout"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_centerHorizontal="true" />
        </LinearLayout>
        <ListView
            android:id="@+id/nav_drawer_items"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</android.support.v4.widget.DrawerLayout>
